<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".FormOrder.DetailsOrder">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detailsP"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Nombre de Usuario"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:layout_marginHorizontal="10dp"
        />

    <EditText
        android:id="@+id/viewNameClient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="15dp"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:backgroundTint="@color/black"
        android:enabled="false"
        />

    <TextView
        android:id="@+id/dirActual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Direccion"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:layout_marginHorizontal="10dp"
        />

    <EditText
        android:id="@+id/viewLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="15dp"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:backgroundTint="@color/black"
        android:enabled="false"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Proveedor"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:layout_marginHorizontal="10dp"
        />

    <EditText
        android:id="@+id/viewProvider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="15dp"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:backgroundTint="@color/black"
        android:enabled="false"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Fecha de Entrega"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:layout_marginHorizontal="10dp"
        />

    <EditText
        android:id="@+id/viewDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="15dp"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:backgroundTint="@color/black"
        android:enabled="false"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Productos"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:layout_marginHorizontal="10dp"
        />

    <EditText
        android:id="@+id/viewProducts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="15dp"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:backgroundTint="@color/black"
        android:enabled="false"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Valor"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:layout_marginHorizontal="10dp"
        />

    <EditText
        android:id="@+id/viewValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="15dp"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:backgroundTint="@color/black"
        android:enabled="false"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/aOrder"
        android:onClick="acceptOrder"
        />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"
            android:text="@string/ePedido"
            android:onClick="entrgado"
            />
    </RadioGroup>
</LinearLayout>